# spanish_rating

./: .gitignore  Cargo.toml  Listado.txt  README.md  makefile  rustfmt.toml
src/: main.rs
