[package]
name = "spanish_rating"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.14"
serde_json = "1.0.93"
serde = { version = "1.0", features = ["derive"] }
tokio = {version= "1.25.0" , features=["full"]}
